[package]
name = "scan-rs"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
chrono-tz = "0.8.1"
clap = { version = "4.1.8", features = ["derive", "cargo", "env"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
futures = "0.3.26"
inquire = "0.6.0"
itertools = "0.10.5"
pdf = "0.8.1"
tempfile = "3.4.0"
test-log = { version = "0.2.11", default-features = false, features = ["trace"] }
tokio = { version = "1.26.0", features = ["full"] }
tokio-retry = "0.3.0"
tokio-stream = { version = "0.1.12", features = ["signal", "tokio-util", "io-util", "fs"] }
tracing = { version = "0.1.37", features = ["valuable", "async-await"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "local-time", "time", "json", "parking_lot"] }
uuid = { version = "1.3.0", features = ["v3", "v4"] }
